# 2025_moveit_simulation-

./: README_RH_PLANNER.md  fix_moveit_issues.md  readme.md
install/: local_setup.sh  setup.sh
install/moveit_resources_panda_description/share/moveit_resources_panda_description/: package.sh
install/moveit_resources_panda_description/share/moveit_resources_panda_description/urdf/: panda.urdf
install/panda_moveit_config/share/ament_index/resource_index/parent_prefix_path/: panda_moveit_config
install/panda_moveit_config/share/panda_moveit_config/: local_setup.sh  package.sh
install/panda_moveit_config/share/panda_moveit_config/config/: joint_limits.yaml  moveit_controllers.yaml  panda.urdf.xacro  ros2_controllers.yaml
log/: latest_build
panda_description/urdf/: panda.urdf
panda_moveit_config/: .setup_assistant  CMakeLists.txt
panda_moveit_config/config/: panda.srdf
panda_moveit_config/launch/: demo.launch.py  gazebo.launch.py  gazebo_rviz.launch.py
panda_moveit_config/worlds/: empty.world
src/moveit_rh_planner/: CMakeLists.txt  package.xml  plugin_description.xml
src/moveit_rh_planner/config/: rh_planner.yaml
src/moveit_rh_planner/include/moveit_rh_planner/: rh_planner.h  rh_planner_manager.h  visual_ctl.h
src/moveit_rh_planner/launch/: demo_rh_planner.launch.py
src/moveit_rh_planner/src/: rh_planner.cpp  rh_planner_manager.cpp
src/moveit_simulation/: CMakeLists.txt  README_COMPARISON.md  package.xml
src/moveit_simulation/include/moveit_simulation/: rh_planner.hpp
src/moveit_simulation/launch/: comparison_demo.launch.py  rh_planner_demo.launch.py  test.launch.py
src/moveit_simulation/scripts/: test_comparison_system.py  trigger_comparison.py  velocity_plotter.py
src/moveit_simulation/src/: comparison_node.cpp  planner.cpp  rh_moveit_integration.cpp  rh_planner.cpp  simple_test.cpp  test.cpp
src/panda_arm_moveit_description/panda_configure/: .setup_assistant  CMakeLists.txt  package.xml
src/panda_arm_moveit_description/panda_configure/config/: joint_limits.yaml  kinematics.yaml  panda.gazebo.xacro  panda.ros2_control.xacro  panda.srdf  panda.urdf.xacro  ros2_controllers.yaml
src/panda_arm_moveit_description/panda_configure/launch/: gazebo.launch.py  gazebo_moveit.launch.py
src/panda_arm_moveit_description/panda_configure/scripts/: test_gazebo.py
